<resources>
    <string name="app_name">Book List</string>
    <string name="adicionar">Adicionar</string>
    <string name="n_mero_de_p_ginas">Número de Páginas</string>
    <string name="g_nero">Gênero</string>
    <string name="nome_do_autor">Nome do Autor(a)</string>
    <string name="t_tulo_do_livro">Título do Livro</string>
    <string name="formBackground">Form Background</string>
    <string name="bem_vindo_a_sua_prateleira">Bem Vindo(a) à sua Prateleira</string>
    <string name="livros_lidos">Livros Lidos</string>
    <string name="livros_para_ler">Livros para Ler</string>
    <string name="wish_list">Wish List</string>
    <string name="remove_title">Excluir Livro</string>
    <string name="remove_btn">Excluir</string>
    <string name="remove_book_dialog">"Você tem certeza que deseja remover este livro de sua lista ?"</string>
    <string name="cancel_btn">Cancelar</string>
</resources>